fix: run fixer and linter
