# docs/swagger.json
@@ -26,7 +26,7 @@
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/request.CreateUrl"
+                            "$ref": "#/definitions/request.CreateURL"
                         }
                     }
                 ],
@@ -42,7 +42,7 @@
                                     "type": "object",
                                     "properties": {
                                         "data": {
-                                            "$ref": "#/definitions/model.Url"
+                                            "$ref": "#/definitions/model.URL"
                                         }
                                     }
                                 }
@@ -94,7 +94,7 @@
                                     "type": "object",
                                     "properties": {
                                         "data": {
-                                            "$ref": "#/definitions/model.UrlWithClicksCount"
+                                            "$ref": "#/definitions/model.URLWithClicksCount"
                                         }
                                     }
                                 }
@@ -244,7 +244,7 @@
                 }
             }
         },
-        "model.Url": {
+        "model.URL": {
             "type": "object",
             "properties": {
                 "created_at": {
@@ -264,7 +264,7 @@
                 }
             }
         },
-        "model.UrlWithClicksCount": {
+        "model.URLWithClicksCount": {
             "type": "object",
             "properties": {
                 "clicks_count": {
@@ -287,7 +287,7 @@
                 }
             }
         },
-        "request.CreateUrl": {
+        "request.CreateURL": {
             "type": "object",
             "required": [
                 "long_url"
