# internal/handler/url.go
@@ -25,15 +25,16 @@ func NewURL(
 }
 
 // Create godoc
-// @Summary    create url
-// @Tags       url
-// @Accept     json
-// @Produce    json
-// @Param      input body request.CreateUrl true "create url"
-// @Success    201 {object} response.Ok{data=model.Url}
-// @Failure    400 {object} response.Fail
-// @Failure    500 {object} response.Fail
-// @Router     /urls [post]
+//
+//	@Summary	create url
+//	@Tags		url
+//	@Accept		json
+//	@Produce	json
+//	@Param		input	body		request.CreateURL	true	"create url"
+//	@Success	201		{object}	response.Ok{data=model.URL}
+//	@Failure	400		{object}	response.Fail
+//	@Failure	500		{object}	response.Fail
+//	@Router		/urls [post]
 func (u *URL) Create(w http.ResponseWriter, r *http.Request) {
 	var request request.CreateURL
 	err := u.parseJSON(&request, r.Body)
@@ -55,14 +56,15 @@ func (u *URL) Create(w http.ResponseWriter, r *http.Request) {
 }
 
 // Stats godoc
-// @Summary   url stats
-// @Tags      url
-// @Produce   json
-// @Param     short_code path string true "short code"
-// @Success   200 {object} response.Ok{data=model.UrlWithClicksCount}
-// @Failure   400 {object} response.Fail
-// @Failure   500 {object} response.Fail
-// @Router    /urls/{short_code} [get]
+//
+//	@Summary	url stats
+//	@Tags		url
+//	@Produce	json
+//	@Param		short_code	path		string	true	"short code"
+//	@Success	200			{object}	response.Ok{data=model.URLWithClicksCount}
+//	@Failure	400			{object}	response.Fail
+//	@Failure	500			{object}	response.Fail
+//	@Router		/urls/{short_code} [get]
 func (u *URL) Stats(w http.ResponseWriter, r *http.Request) {
 	url, err := u.urlService.GetStats(
 		r.Context(),
@@ -76,13 +78,14 @@ func (u *URL) Stats(w http.ResponseWriter, r *http.Request) {
 }
 
 // Click godoc
-// @Summary   click short code
-// @Tags      url
-// @Param     short_code path string true "short code"
-// @Success   302
-// @Failure   400 {object} response.Fail
-// @Failure   500 {object} response.Fail
-// @Router    /{short_code} [get]
+//
+//	@Summary	click short code
+//	@Tags		url
+//	@Param		short_code	path	string	true	"short code"
+//	@Success	302
+//	@Failure	400	{object}	response.Fail
+//	@Failure	500	{object}	response.Fail
+//	@Router		/{short_code} [get]
 func (u *URL) Click(w http.ResponseWriter, r *http.Request) {
 	url, err := u.urlService.Click(
 		r.Context(),
